configs/clover-corp-router-rules.v4
# Generated by iptables-save v1.8.8 on Fri Jan  2 14:55:47 2026
*filter
:INPUT DROP [4:1326]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [4:192]
-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o eth0 -j ACCEPT
-A FORWARD -d 10.101.50.10/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A FORWARD -s 10.101.50.0/24 -d 10.102.10.0/24 -j DROP
COMMIT
# Completed on Fri Jan  2 14:55:47 2026
# Generated by iptables-save v1.8.8 on Fri Jan  2 14:55:47 2026
*nat
:PREROUTING ACCEPT [5:1386]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [4:192]
:POSTROUTING ACCEPT [6:312]
-A PREROUTING -i eth0 -p tcp -m tcp --dport 80 -j DNAT --to-destination 10.101.50.10
-A POSTROUTING -o eth0 -j SNAT --to-source 198.51.100.123
COMMIT
# Completed on Fri Jan  2 14:55:47 2026
